Started on game logic

--- a/chess/templates/chessGame.html
+++ b/chess/templates/chessGame.html
@@ -20,14 +20,14 @@
             </div>
 
             <div id="x_axis">
-                <div class="x_label" id="08">8</div>
-                <div class="x_label" id="07">7</div>
-                <div class="x_label" id="06">6</div>
-                <div class="x_label" id="05">5</div>
-                <div class="x_label" id="04">4</div>
-                <div class="x_label" id="03">3</div>
-                <div class="x_label" id="02">2</div>
-                <div class="x_label" id="01">1</div>
+                <div class="x_label" id="a0">a</div>
+                <div class="x_label" id="b0">b</div>
+                <div class="x_label" id="c0">c</div>
+                <div class="x_label" id="d0">d</div>
+                <div class="x_label" id="e0">e</div>
+                <div class="x_label" id="f0">f</div>
+                <div class="x_label" id="g0">g</div>
+                <div class="x_label" id="h0">h</div>
             </div>
         <div>
 
@@ -108,13 +108,5 @@
 
 
         </div>
-        <!-- <div class="x_label" id="a0">a</div>
-        <div class="x_label" id="b0">b</div>
-        <div class="x_label" id="c0">c</div>
-        <div class="x_label" id="d0">d</div>
-        <div class="x_label" id="e0">e</div>
-        <div class="x_label" id="f0">f</div>
-        <div class="x_label" id="g0">g</div>
-        <div class="x_label" id="h0">h</div> -->
     </body>
 </html>
