updated chessboard.js page

--- a/chess/templates/chessBoard.html
+++ b/chess/templates/chessBoard.html
@@ -6,6 +6,12 @@
         <script language="javascript" src="../static/js/chessboard-0.3.0.js"></script>
         <link rel="stylesheet" href="../static/css/chessboard-0.3.0.css">
     </head>     
-    <div id="board1" style="width: 400px"></div>
+    <body>
+        <div class='col'> 
+          <div id="board1" style="width: 400px"></div>
+          <input type="button" id="startBtn" value="Start" />
+          <input type="button" id="clearBtn" value="Clear" />
+        </div>
+    </body>
     <script language="javascript" src="../static/js/chessBoard.js"></script>
 </html>
